Bug 373677 - Command line '--title' option is no longer actioned
Summary: Command line '--title' option is no longer actioned
Status: RESOLVED FIXED
Alias: None
Product: kdialog
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Brad Hards
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-12-15 11:38 UTC by Jonathan Marten
Modified: 2016-12-21 09:41 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 16.12.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jonathan Marten 2016-12-15 11:38:25 UTC
Since the port to QCommandLineParser (b3f4bfbd), the "--title" option to set the dialogue title is accepted but has no effect.  This is because Qt parses and actions it without passing it to the application.  The option is still shown in the "--help" output.

Test case: the tests/test script, which specifies a title for the message box tests but shows only "Question", "Warning", "Information" etc. as the window title.
Comment 1 sssiiiddd 2016-12-18 01:39:12 UTC
Same problem here. Additionally, when running kdialog in a system with dual monitors, QCommandLineParser complains about missing "geometry" parameter.

More details: https://www.reddit.com/r/kde/comments/5ix96k/kdialog_broken/
Comment 2 Kai Uwe Broulik 2016-12-19 06:44:10 UTC
Possible patch https://phabricator.kde.org/D3727
Comment 3 Kai Uwe Broulik 2016-12-21 09:41:49 UTC
Git commit 40f23a37f502354126f96a484c8f9c04143f413c by Kai Uwe Broulik.
Committed on 21/12/2016 at 09:41.
Pushed by broulik into branch 'Applications/16.12'.

Store arguments before creating QApplication

Qt removes certain arguments, such as title and icon, from argv before our QCommandLineParser gets a chance to parse them.

CHANGELOG: Fixed command line arguments, such as --title and --icon not working
FIXED-IN: 16.12.1

Differential Revision: https://phabricator.kde.org/D3727

M  +9    -1    src/kdialog.cpp

https://commits.kde.org/kdialog/40f23a37f502354126f96a484c8f9c04143f413c