Store arguments before creating QApplication

Qt removes certain arguments, such as title and icon, from argv before our QCommandLineParser gets a chance to parse them.

CHANGELOG: Fixed command line arguments, such as --title and --icon not working

BUG: 373677
FIXED-IN: 16.12.1

Differential Revision: https://phabricator.kde.org/D3727